<resources>
    <string name="app_name">Tu Sabes</string>
    <string name="registerTitle">Registro</string>
    <string name="names_campo">Escribe tu(s) Nombre(s)</string>
    <string name="surnames_campo">Escribe tu(s) Apellido(s)</string>
    <string name="email_campo">Escribe tu e-mail</string>
    <string name="passwd_conf_campo">Vuelve a escribir tu Contraseña</string>
    <string name="registerAccept">Acepto la política de declaración de privacidad y los términos y condiciones de uso.</string>
    <string name="registerButtonOk">Aceptar</string>
    <string name="declaracionPrivacidadTitulo">Declaración de Privacidad y Tratamiento de Datos Personales</string>
    <string name="condicionesUsoTitulo">Condiciones de Uso de la App Tu Sabes</string>
    <string name="declaracionPrivacidad">La Aplicación Tu Sabes (de aqui en adelante llamada LA APP)
        y su desarrollador K-Droid, en cumplimiento de la Ley 1581 de 2012 y demás normas concordantes,
        es responsable del tratamiento de sus datos personales.
        Los datos personales que LA APP solicita serán utilizados para registrarlo como usuario de la
        plataforma y llevar una estadística de resultados de las pruebas que usted ejercita con LA APP.
        Como titular de información tiene derecho a conocer, actualizar y rectificar sus datos personales
        y, sólo en los casos en que sea procedente, a suprimirlos o revocar la autorización otorgada
        para su tratamiento.
        Si requiere mayor información para conocer nuestra política de tratamiento de datos personales
        y los cambios sustanciales que se produzcan en ella, consulte aquí (Link En Construcción).
        Si desea presentar una consulta, reclamo o petición de información relacionada con la protección
        de datos personales puede contactarse al correo atencion@tusabes.kdroid.com</string>
    <string name="condicionesUso">El presente documento establece las condiciones mediante las cuales
        se regirá el uso de la aplicación móvil: Tu Sabes (en adelante la aplicación), la cual es operada
        por K-Droid Developers (en adelante K-Droid).
        La aplicación funcionará como un modo de practica y preparación de los usuarios para la
        presentación de las pruebas Saber 2022.
        El usuario se compromete a leer los términos y condiciones aquí establecidas, previamente a la
        descarga de la aplicación, por tanto, en caso de realizar la instalación se entiende que cuenta
        con el conocimiento integral de este documento y la consecuente aceptación de la totalidad de sus
        estipulaciones.
        El Usuario reconoce que el ingreso de su información personal, y los datos que contiene la
        aplicación a su disposición respecto a la aplicación, la realizan de manera voluntaria, quienes
        optan por acceder a esta aplicación en Colombia o desde fuera del territorio nacional, lo hacen
        por iniciativa propia y son responsables del cumplimiento de las leyes locales, en la medida en
        que dichas leyes sean aplicables en su correspondiente país. En caso de que se acceda por parte de
        menores de edad, deben contar con la supervisión de un adulto en todo momento desde la descarga y
        durante el uso de la aplicación, en el evento en que no se cumpla esta condición, le agradecemos no
        hacer uso de la aplicación.</string>
    <string name="registerLinkDeclaracionPrivacidad"><u>Declaración de privacidad</u></string>
    <string name="registerLinkTerminosUso"><u>Términos de Uso</u></string>

    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="username_campo">Escribe Tu Nombre de Usuario</string>
    <string name="password_campo">Escribe tu Clave</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="rol_campo">Soy Profesor</string>
    <string name="btn_salir">Salir</string>
    <string name="tab_item_preguntas">Preguntas</string>
    <string name="tab_item_pruebas">Pruebas</string>
    <string name="tab_item_categorias">Categorías</string>
    <string name="btn_create_pregunta">Crear una Pregunta nueva</string>
    <string name="pregunta_enunciado">Enunciado de la Pregunta</string>
    <string name="pregunta_opcion_1">Opción 1</string>
    <string name="pregunta_opcion_2">Opción 2</string>
    <string name="pregunta_opcion_3">Opción 3</string>
    <string name="pregunta_opcion_4">Opción 4</string>
    <string name="pregunta_opcion_5">Opción 5</string>
    <string name="pregunta_respuesta">Respuesta Correcta (el número)</string>
    <string name="pregunta_categoria">Categoría</string>
    <string name="btn_guardar_pregunta">Guardar</string>
    <string name="btn_cancelar_pregunta">Cancelar</string>
    <string name="btn_actualizar_pregunta">Actualizar</string>
    <string name="btn_eliminar_pregunta">Eliminar</string>
    <string name="btn_volver_pregunta">Volver</string>
    <string name="sw_editar_pregunta">Editar</string>
    <string name="btn_anadir_categoria">Añadir</string>
    <string name="cat_id">Id Categoría (Para Testing)</string>
    <string name="nombre_categoria">Nombre de La Categoría</string>
    <string name="btn_nueva_prueba">Generar Nueva Prueba</string>
    <string name="tv_pruebas_generadas">Pruebas Generadas</string>
    <string name="nueva_prueba_cantidad">Cantidad de Preguntas</string>
    <string name="nueva_prueba_opciones">Opciones Avanzadas</string>
    <string name="nueva_prueba_checkbox">Todas las categorías</string>
    <string name="nueva_prueba_explicacion">Al oprimir el boton de generar una nueva prueba,
        el sistema generará una prueba de 5 preguntas aleatorias entre todas las preguntas y
        todas las categorías. Para generar una prueba personalizada prende el switch de Opciones
        avanzadas y podrás escoger la categoría de las preguntas así como la cantidad de preguntas.
    </string>
    <string name="prueba_detalle_titulo">Prueba</string>
    <string name="btn_presentar_prueba">Presentar</string>
    <string name="btn_anterior_prueba">Pregunta Anterior</string>
    <string name="btn_siguiente_prueba">Pregunta Siguiente</string>
    <string name="btn_calificar_prueba">Calificar Prueba</string>
    <string name="sw_mostrar_respuesta_prueba">Ver Respuesta Correcta</string>
    <string name="btn_calificar_pregunta">Enviar Respuesta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>