<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RegistroFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/names_campo"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surnames_campo"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtApellidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_campo"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_campo"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_campo"
        app:passwordToggleEnabled="true"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd_conf_campo"
        app:passwordToggleEnabled="true"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmaPasswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chbRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rol_campo"
        android:layout_margin="10dp"
        android:layout_gravity="right"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chbAceptarTyC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerAccept"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/tvDeclaracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLinkDeclaracionPrivacidad"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/blue_700"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tvTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLinkTerminosUso"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/blue_700"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        />
</LinearLayout>
</ScrollView>