<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPreguntaFragment"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_categoria"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>
        <Spinner
            android:id="@+id/spinPreguntaCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tooltipText="@string/pregunta_categoria"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_enunciado"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaEnunciado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_opcion_1"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaOp1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_opcion_2"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaOp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_opcion_3"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaOp3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_opcion_4"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaOp4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_opcion_5"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaOp5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiRespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pregunta_respuesta"
            android:layout_margin="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPreguntaRespuesta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llBotonesCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">
            <Button
                android:id="@+id/btnGuardarPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar_pregunta"
                android:layout_marginHorizontal="10dp"/>
            <Button
                android:id="@+id/btnCancelarPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar_pregunta"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBotonesActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swEditarPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sw_editar_pregunta"
                android:layout_marginHorizontal="5dp"/>
            <ImageButton
                android:id="@+id/btnActualizarPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_actualizar_pregunta"
                android:layout_marginHorizontal="5dp"
                android:src="@android:drawable/ic_menu_save"
                android:backgroundTint="@color/teal_700"
                android:tooltipText="@string/btn_actualizar_pregunta"
                android:visibility="gone"/>
            <ImageButton
                android:id="@+id/btnEliminarPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_eliminar_pregunta"
                android:layout_marginHorizontal="5dp"
                android:src="@android:drawable/ic_menu_delete"
                android:backgroundTint="@color/red_700"
                android:tooltipText="@string/btn_eliminar_pregunta"/>
            <ImageButton
                android:id="@+id/btnVolverPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_volver_pregunta"
                android:layout_marginHorizontal="5dp"
                android:src="@android:drawable/ic_menu_revert"
                android:backgroundTint="@color/blue_700"
                android:tooltipText="@string/btn_volver_pregunta"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>