<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BienvenidaFragment"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bienvenida"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/blue_700"
        android:text="@string/title_welcome"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_margin="20dp"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue_700"
        android:text="@string/btn_login"/>
    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue_700"
        android:text="@string/btn_register"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentPantallaBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>