<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_campo"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_campo"
        app:passwordToggleEnabled="true"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ingresar"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>