<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".EstudianteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="100dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/tvNombreEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estudiante"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"/>
        <TextView
            android:id="@+id/tvRolEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rol"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="end">
            <ImageButton
                android:id="@+id/btnSalirEstudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="@string/btn_salir"
                android:backgroundTint="@color/red_200"
                android:src="@android:drawable/ic_menu_revert" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:layout_marginTop="10dp">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_preguntas"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_pruebas"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContenedorEstudiante"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>